Correcao da lista de requisicoes

--- a/Dissertacao_Marcelo_Goncalves/capitulos/resultados.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/resultados.tex
@@ -92,12 +92,12 @@ na Carga de Trabalho no período de 1 hora. Cada usuário disparava a seguinte
 sequência de requisições:
 
 \begin{enumerate}
-  \item Visitar a página inicial
-  \item Efetuar pesquisa por palavra-chave
-  \item Visitar uma postagem específica
   \item Efetuar \emph{logon}
   \item Inserir uma postagem
-  \item Inserir um comentário em uma postagem
+  \item Visitar uma postagem específica
+  \item Alterar uma postagem
+  \item Efetuar pesquisa por palavra-chave
+  \item Alterar uma postagem
   \item Efetuar \emph{logoff}
 \end{enumerate}
 
