--- a/Dissertacao_Marcelo_Goncalves/dissertacao.bib
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.bib
@@ -295,3 +295,9 @@ year = {2010}
   year={1994},
   publisher={Pearson Education}
 }
+@article{powers2011evaluation,
+  title={Evaluation: from precision, recall and F-measure to ROC, informedness, markedness and correlation},
+  author={Powers, David Martin},
+  year={2011},
+  publisher={Bioinfo Publications}
+}
