--- a/Dissertacao_Marcelo_Goncalves/dissertacao.bib
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.bib
@@ -299,5 +299,5 @@ year = {2010}
   title={Evaluation: from precision, recall and F-measure to ROC, informedness, markedness and correlation},
   author={Powers, David Martin},
   year={2011},
-  publisher={Bioinfo Publications}
+  journal={Journal of Machine Learning Technologies, 2:1-37-63}
 }
